--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 </head>
 <body>
     <h1>Happy Anniversary, Minnie !</h1>
-    <img src="your-photo.jpg" alt="Our Moments">
+    <img src="Harps12/anniversary-website/your-photo.jpg.jpg" alt="Our Moments">
     <div class="message">
         <p>Today, we celebrate our love and all the beautiful memories we've created together.</p>
         <p>I love you more than words can express!</p>
