--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 </head>
 <body>
     <h1>Happy Anniversary, Minnie !</h1>
-    <img src="Harps12/anniversary-website/your-photo.jpg.jpg" alt="Our Moments">
+    <img src="https://github.com/Harps12/anniversary-website/blob/d34e465664b51fda0642392fbe5d962f3c1a3a97/your-photo.jpg.jpg" height ="200" width = "300">
     <div class="message">
         <p>Today, we celebrate our love and all the beautiful memories we've created together.</p>
         <p>I love you more than words can express!</p>
